@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Override xPDOQuery->parseConditions() for sqlsrv
 - Use SET IDENTITY INSERT in xPDOObjectVehicle->install() (sqlsrv)
 - Remove LIMIT from UPDATE in xPDOObject->save()
 - Fix handling of bigint with timestamp phptype (sqlsrv)
